<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingStart="8dp"
        android:background="@color/black_222">
        <ImageView
            android:id="@+id/navigationIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_chevron_left"
            android:layout_gravity="center_vertical"
            app:tint="@color/white" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="Вход в аккаунт"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/email"/>
        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:textSize="17sp"
            android:letterSpacing="0"
            android:text="@string/login"
            android:textAllCaps="false"
            android:backgroundTint="@color/blue"
            app:elevation="0dp"
            app:cornerRadius="0dp"/>
        <TextView
            android:id="@+id/textForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:textColor="@color/blue"
            android:text="Забыли пароль ?"/>

    </LinearLayout>
</LinearLayout>